[project]
name = "run-tracker-visualized"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.7",
    "gspread>=6.1.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "uvicorn>=0.34.0",
]
